LexingParsingCOOL/COOLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g 2018-03-16 14:55:38

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using LexingParsingCOOL;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class COOLParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARROBA", "ASSIGNMENT_LIST", "ASSING", "ATTRIBUTE", "BLOCK", "BODY", "BOOLEAN", "CASE", "CASEBRANCH", "CASEBRANCHES", "CHAR", "CLASS", "CL_LLAVE", "CL_PARENT", "COMA", "COMMENT", "CONDITION", "DIGIT", "DISPATCH", "DIV", "DOUBLEP", "ELSE", "END", "EQ", "ESAC", "ESC_SEQ", "EXPONENT", "FI", "G", "GEQ", "HEX_DIGIT", "ID", "IF", "IMPLICS", "IN", "INHERITS", "ISVOID", "L", "LEQ", "LET", "LOOP", "LOWERCASE", "METHOD", "METHODEFINITION", "MINUS", "MULT", "NANARITA", "NEW", "NL", "NOT", "NUMBER", "OCTAL_ESC", "OF", "OP_LLAVE", "OP_PARENT", "PARAM", "PARAMLIST", "PLUS", "PNT", "POOL", "PROGRAM", "STRING", "THEN", "TYPE", "UNICODE_ESC", "UPERCASE", "VAR_DECLARATION", "VAR_DECLARATION_LIST", "WHILE", "WS"
	};
	public const int EOF=-1;
	public const int ARROBA=4;
	public const int ASSIGNMENT_LIST=5;
	public const int ASSING=6;
	public const int ATTRIBUTE=7;
	public const int BLOCK=8;
	public const int BODY=9;
	public const int BOOLEAN=10;
	public const int CASE=11;
	public const int CASEBRANCH=12;
	public const int CASEBRANCHES=13;
	public const int CHAR=14;
	public const int CLASS=15;
	public const int CL_LLAVE=16;
	public const int CL_PARENT=17;
	public const int COMA=18;
	public const int COMMENT=19;
	public const int CONDITION=20;
	public const int DIGIT=21;
	public const int DISPATCH=22;
	public const int DIV=23;
	public const int DOUBLEP=24;
	public const int ELSE=25;
	public const int END=26;
	public const int EQ=27;
	public const int ESAC=28;
	public const int ESC_SEQ=29;
	public const int EXPONENT=30;
	public const int FI=31;
	public const int G=32;
	public const int GEQ=33;
	public const int HEX_DIGIT=34;
	public const int ID=35;
	public const int IF=36;
	public const int IMPLICS=37;
	public const int IN=38;
	public const int INHERITS=39;
	public const int ISVOID=40;
	public const int L=41;
	public const int LEQ=42;
	public const int LET=43;
	public const int LOOP=44;
	public const int LOWERCASE=45;
	public const int METHOD=46;
	public const int METHODEFINITION=47;
	public const int MINUS=48;
	public const int MULT=49;
	public const int NANARITA=50;
	public const int NEW=51;
	public const int NL=52;
	public const int NOT=53;
	public const int NUMBER=54;
	public const int OCTAL_ESC=55;
	public const int OF=56;
	public const int OP_LLAVE=57;
	public const int OP_PARENT=58;
	public const int PARAM=59;
	public const int PARAMLIST=60;
	public const int PLUS=61;
	public const int PNT=62;
	public const int POOL=63;
	public const int PROGRAM=64;
	public const int STRING=65;
	public const int THEN=66;
	public const int TYPE=67;
	public const int UNICODE_ESC=68;
	public const int UPERCASE=69;
	public const int VAR_DECLARATION=70;
	public const int VAR_DECLARATION_LIST=71;
	public const int WHILE=72;
	public const int WS=73;

	public COOLParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public COOLParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return COOLParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:43:9: public program : ( class )+ EOF -> ^( PROGRAM ( class )+ ) ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<COOLCommonTree, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<COOLCommonTree, IToken> retval = new AstParserRuleReturnScope<COOLCommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		COOLCommonTree root_0 = default(COOLCommonTree);

		IToken EOF2 = default(IToken);
		AstParserRuleReturnScope<COOLCommonTree, IToken> class1 = default(AstParserRuleReturnScope<COOLCommonTree, IToken>);

		COOLCommonTree EOF2_tree = default(COOLCommonTree);
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_class=new RewriteRuleSubtreeStream(adaptor,"rule class");
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(43, 51);
		try
		{
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:43:16: ( ( class )+ EOF -> ^( PROGRAM ( class )+ ) )
			DebugEnterAlt(1);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:43:18: ( class )+ EOF
			{
			DebugLocation(43, 18);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:43:18: ( class )+
			int cnt1=0;
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==CLASS))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:43:19: class
					{
					DebugLocation(43, 19);
					PushFollow(Follow._class_in_program94);
					class1=@class();
					PopFollow();

					stream_class.Add(class1.Tree);

					}
					break;

				default:
					if (cnt1 >= 1)
						goto loop1;

					EarlyExitException eee1 = new EarlyExitException( 1, input );
					DebugRecognitionException(eee1);
					throw eee1;
				}
				cnt1++;
			}
			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(43, 27);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_program98);  
			stream_EOF.Add(EOF2);



			{
			// AST REWRITE
			// elements: class
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (COOLCommonTree)adaptor.Nil();
			// 43:30: -> ^( PROGRAM ( class )+ )
			{
				DebugLocation(43, 32);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:43:32: ^( PROGRAM ( class )+ )
				{
				COOLCommonTree root_1 = (COOLCommonTree)adaptor.Nil();
				DebugLocation(43, 34);
				root_1 = (COOLCommonTree)adaptor.BecomeRoot((COOLCommonTree)adaptor.Create(PROGRAM, "PROGRAM"), root_1);

				DebugLocation(43, 42);
				if (!(stream_class.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_class.HasNext )
				{
					DebugLocation(43, 43);
					adaptor.AddChild(root_1, stream_class.NextTree());

				}
				stream_class.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (COOLCommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (COOLCommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(43, 51);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_class();
	partial void LeaveRule_class();

	// $ANTLR start "class"
	// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:45:2: class : ( CLASS ^ TYPE ( INHERITS TYPE )? OP_LLAVE ! ( feature_list )? CL_LLAVE ! END !) ;
	[GrammarRule("class")]
	private AstParserRuleReturnScope<COOLCommonTree, IToken> @class()
	{
		EnterRule_class();
		EnterRule("class", 2);
		TraceIn("class", 2);
		AstParserRuleReturnScope<COOLCommonTree, IToken> retval = new AstParserRuleReturnScope<COOLCommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		COOLCommonTree root_0 = default(COOLCommonTree);

		IToken CLASS3 = default(IToken);
		IToken TYPE4 = default(IToken);
		IToken INHERITS5 = default(IToken);
		IToken TYPE6 = default(IToken);
		IToken OP_LLAVE7 = default(IToken);
		IToken CL_LLAVE9 = default(IToken);
		IToken END10 = default(IToken);
		AstParserRuleReturnScope<COOLCommonTree, IToken> feature_list8 = default(AstParserRuleReturnScope<COOLCommonTree, IToken>);

		COOLCommonTree CLASS3_tree = default(COOLCommonTree);
		COOLCommonTree TYPE4_tree = default(COOLCommonTree);
		COOLCommonTree INHERITS5_tree = default(COOLCommonTree);
		COOLCommonTree TYPE6_tree = default(COOLCommonTree);
		COOLCommonTree OP_LLAVE7_tree = default(COOLCommonTree);
		COOLCommonTree CL_LLAVE9_tree = default(COOLCommonTree);
		COOLCommonTree END10_tree = default(COOLCommonTree);
		try { DebugEnterRule(GrammarFileName, "class");
		DebugLocation(45, 2);
		try
		{
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:45:7: ( ( CLASS ^ TYPE ( INHERITS TYPE )? OP_LLAVE ! ( feature_list )? CL_LLAVE ! END !) )
			DebugEnterAlt(1);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:45:9: ( CLASS ^ TYPE ( INHERITS TYPE )? OP_LLAVE ! ( feature_list )? CL_LLAVE ! END !)
			{
			root_0 = (COOLCommonTree)adaptor.Nil();

			DebugLocation(45, 9);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:45:9: ( CLASS ^ TYPE ( INHERITS TYPE )? OP_LLAVE ! ( feature_list )? CL_LLAVE ! END !)
			DebugEnterAlt(1);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:45:10: CLASS ^ TYPE ( INHERITS TYPE )? OP_LLAVE ! ( feature_list )? CL_LLAVE ! END !
			{
			DebugLocation(45, 15);
			CLASS3=(IToken)Match(input,CLASS,Follow._CLASS_in_class117); 
			CLASS3_tree = (COOLCommonTree)adaptor.Create(CLASS3);
			root_0 = (COOLCommonTree)adaptor.BecomeRoot(CLASS3_tree, root_0);
			DebugLocation(45, 17);
			TYPE4=(IToken)Match(input,TYPE,Follow._TYPE_in_class120); 
			TYPE4_tree = (COOLCommonTree)adaptor.Create(TYPE4);
			adaptor.AddChild(root_0, TYPE4_tree);
			DebugLocation(45, 22);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:45:22: ( INHERITS TYPE )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_0 = input.LA(1);

			if ((LA2_0==INHERITS))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:45:23: INHERITS TYPE
				{
				DebugLocation(45, 23);
				INHERITS5=(IToken)Match(input,INHERITS,Follow._INHERITS_in_class123); 
				INHERITS5_tree = (COOLCommonTree)adaptor.Create(INHERITS5);
				adaptor.AddChild(root_0, INHERITS5_tree);
				DebugLocation(45, 32);
				TYPE6=(IToken)Match(input,TYPE,Follow._TYPE_in_class125); 
				TYPE6_tree = (COOLCommonTree)adaptor.Create(TYPE6);
				adaptor.AddChild(root_0, TYPE6_tree);

				}
				break;

			}
			} finally { DebugExitSubRule(2); }

			DebugLocation(45, 47);
			OP_LLAVE7=(IToken)Match(input,OP_LLAVE,Follow._OP_LLAVE_in_class129); 
			DebugLocation(45, 49);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:45:49: ( feature_list )?
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			int LA3_0 = input.LA(1);

			if ((LA3_0==ID))
			{
				alt3 = 1;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:45:51: feature_list
				{
				DebugLocation(45, 51);
				PushFollow(Follow._feature_list_in_class134);
				feature_list8=feature_list();
				PopFollow();

				adaptor.AddChild(root_0, feature_list8.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(3); }

			DebugLocation(45, 74);
			CL_LLAVE9=(IToken)Match(input,CL_LLAVE,Follow._CL_LLAVE_in_class138); 
			DebugLocation(45, 79);
			END10=(IToken)Match(input,END,Follow._END_in_class141); 

			}


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (COOLCommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (COOLCommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("class", 2);
			LeaveRule("class", 2);
			LeaveRule_class();
		}
		DebugLocation(46, 2);
		} finally { DebugExitRule(GrammarFileName, "class"); }
		return retval;

	}
	// $ANTLR end "class"

	partial void EnterRule_feature_list();
	partial void LeaveRule_feature_list();

	// $ANTLR start "feature_list"
	// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:47:2: feature_list : ( feature )+ ;
	[GrammarRule("feature_list")]
	private AstParserRuleReturnScope<COOLCommonTree, IToken> feature_list()
	{
		EnterRule_feature_list();
		EnterRule("feature_list", 3);
		TraceIn("feature_list", 3);
		AstParserRuleReturnScope<COOLCommonTree, IToken> retval = new AstParserRuleReturnScope<COOLCommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		COOLCommonTree root_0 = default(COOLCommonTree);

		AstParserRuleReturnScope<COOLCommonTree, IToken> feature11 = default(AstParserRuleReturnScope<COOLCommonTree, IToken>);

		try { DebugEnterRule(GrammarFileName, "feature_list");
		DebugLocation(47, 23);
		try
		{
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:47:14: ( ( feature )+ )
			DebugEnterAlt(1);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:47:16: ( feature )+
			{
			root_0 = (COOLCommonTree)adaptor.Nil();

			DebugLocation(47, 16);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:47:16: ( feature )+
			int cnt4=0;
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, false);
				int LA4_0 = input.LA(1);

				if ((LA4_0==ID))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch (alt4)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:47:16: feature
					{
					DebugLocation(47, 16);
					PushFollow(Follow._feature_in_feature_list153);
					feature11=feature();
					PopFollow();

					adaptor.AddChild(root_0, feature11.Tree);

					}
					break;

				default:
					if (cnt4 >= 1)
						goto loop4;

					EarlyExitException eee4 = new EarlyExitException( 4, input );
					DebugRecognitionException(eee4);
					throw eee4;
				}
				cnt4++;
			}
			loop4:
				;

			} finally { DebugExitSubRule(4); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (COOLCommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (COOLCommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("feature_list", 3);
			LeaveRule("feature_list", 3);
			LeaveRule_feature_list();
		}
		DebugLocation(47, 23);
		} finally { DebugExitRule(GrammarFileName, "feature_list"); }
		return retval;

	}
	// $ANTLR end "feature_list"

	partial void EnterRule_feature();
	partial void LeaveRule_feature();

	// $ANTLR start "feature"
	// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:48:2: feature : ( ID ( attribute -> ^( ATTRIBUTE ID attribute ) | methodefinition -> ^( METHOD ID methodefinition ) ) END ) ;
	[GrammarRule("feature")]
	private AstParserRuleReturnScope<COOLCommonTree, IToken> feature()
	{
		EnterRule_feature();
		EnterRule("feature", 4);
		TraceIn("feature", 4);
		AstParserRuleReturnScope<COOLCommonTree, IToken> retval = new AstParserRuleReturnScope<COOLCommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		COOLCommonTree root_0 = default(COOLCommonTree);

		IToken ID12 = default(IToken);
		IToken END15 = default(IToken);
		AstParserRuleReturnScope<COOLCommonTree, IToken> attribute13 = default(AstParserRuleReturnScope<COOLCommonTree, IToken>);
		AstParserRuleReturnScope<COOLCommonTree, IToken> methodefinition14 = default(AstParserRuleReturnScope<COOLCommonTree, IToken>);

		COOLCommonTree ID12_tree = default(COOLCommonTree);
		COOLCommonTree END15_tree = default(COOLCommonTree);
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_END=new RewriteRuleITokenStream(adaptor,"token END");
		RewriteRuleSubtreeStream stream_attribute=new RewriteRuleSubtreeStream(adaptor,"rule attribute");
		RewriteRuleSubtreeStream stream_methodefinition=new RewriteRuleSubtreeStream(adaptor,"rule methodefinition");
		try { DebugEnterRule(GrammarFileName, "feature");
		DebugLocation(48, 106);
		try
		{
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:48:9: ( ( ID ( attribute -> ^( ATTRIBUTE ID attribute ) | methodefinition -> ^( METHOD ID methodefinition ) ) END ) )
			DebugEnterAlt(1);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:48:11: ( ID ( attribute -> ^( ATTRIBUTE ID attribute ) | methodefinition -> ^( METHOD ID methodefinition ) ) END )
			{
			DebugLocation(48, 11);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:48:11: ( ID ( attribute -> ^( ATTRIBUTE ID attribute ) | methodefinition -> ^( METHOD ID methodefinition ) ) END )
			DebugEnterAlt(1);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:48:12: ID ( attribute -> ^( ATTRIBUTE ID attribute ) | methodefinition -> ^( METHOD ID methodefinition ) ) END
			{
			DebugLocation(48, 12);
			ID12=(IToken)Match(input,ID,Follow._ID_in_feature162);  
			stream_ID.Add(ID12);

			DebugLocation(48, 15);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:48:15: ( attribute -> ^( ATTRIBUTE ID attribute ) | methodefinition -> ^( METHOD ID methodefinition ) )
			int alt5=2;
			try { DebugEnterSubRule(5);
			try { DebugEnterDecision(5, false);
			int LA5_0 = input.LA(1);

			if ((LA5_0==DOUBLEP))
			{
				alt5 = 1;
			}
			else if ((LA5_0==OP_PARENT))
			{
				alt5 = 2;
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 5, 0, input);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(5); }
			switch (alt5)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:48:16: attribute
				{
				DebugLocation(48, 16);
				PushFollow(Follow._attribute_in_feature165);
				attribute13=attribute();
				PopFollow();

				stream_attribute.Add(attribute13.Tree);


				{
				// AST REWRITE
				// elements: ID, attribute
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (COOLCommonTree)adaptor.Nil();
				// 48:25: -> ^( ATTRIBUTE ID attribute )
				{
					DebugLocation(48, 28);
					// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:48:28: ^( ATTRIBUTE ID attribute )
					{
					COOLCommonTree root_1 = (COOLCommonTree)adaptor.Nil();
					DebugLocation(48, 30);
					root_1 = (COOLCommonTree)adaptor.BecomeRoot((COOLCommonTree)adaptor.Create(ATTRIBUTE, "ATTRIBUTE"), root_1);
